--- a/figma/src/component/Rodmap.css
+++ b/figma/src/component/Rodmap.css
@@ -315,3 +315,16 @@ box-shadow: 0px 1px 4px 0px #37C5E51F;
 margin-left: 20vw;
 }
   
+/* ---------------------------------footer-------------------------------- */
+.footer{
+  width: Fill (1,440px)px;
+height: Hug (470px)px;
+margin-top: -30px;
+gap: 0px;
+opacity: 0px;
+background: #010F14;
+display: flex;
+}
+.text{
+  padding-top: 30px;
+}
