--- a/figma/src/component/TokenDetails.css
+++ b/figma/src/component/TokenDetails.css
@@ -65,3 +65,43 @@ opacity: 0px;
 .token-info p, .token-distribution p {
   margin: 5px 0;
 }
+
+
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.token-info p, .token-distribution p {
+  animation: slideIn 1s forwards;
+}
+
+/* Active state with color change */
+.token-info p.active, .token-distribution p.active {
+  color: #4caf50; /* Example active color */
+  font-weight: bold;
+}
+
+/* Add a sequential delay for each p element */
+.token-info p:nth-child(1), .token-distribution p:nth-child(1) {
+  animation-delay: 0.5s;
+}
+.token-info p:nth-child(2), .token-distribution p:nth-child(2) {
+  animation-delay: 1s;
+}
+.token-info p:nth-child(3), .token-distribution p:nth-child(3) {
+  animation-delay: 1.5s;
+}
+.token-info p:nth-child(4), .token-distribution p:nth-child(4) {
+  animation-delay: 2s;
+}
+.token-info p:nth-child(5), .token-distribution p:nth-child(5) {
+  animation-delay: 2.5s;
+}
