--- a/figma/src/component/Main.css
+++ b/figma/src/component/Main.css
@@ -168,3 +168,65 @@
         width: 97%;
     }
 }
+
+
+@media only screen and (max-width: 768px) {
+    .landingpage {
+        width: 90%;
+        height: auto;
+        margin: 20px 10px;
+    }
+
+    .font {
+        font-size: 36px;
+        max-width: 100%;
+    }
+
+    .font span {
+        font-size: 36px;
+        padding: 8px 10px;
+    }
+
+    .txt {
+        font-size: 16px;
+        line-height: 24px;
+    }
+
+    .dapp {
+        width: 100px;
+        height: 36px;
+    }
+
+    .About {
+        justify-content: center;
+    }
+
+    .About1 {
+        font-size: 24px;
+        width: auto;
+    }
+
+    .About2 {
+        font-size: 10px;
+    }
+
+    .abt-btn {
+        width: 90px;
+        height: 36px;
+    }
+
+    .About4 {
+        width: 90%;
+        height: auto;
+        flex-direction: column;
+    }
+
+    .About41, .About42 {
+        width: 100%;
+        height: auto;
+    }
+
+    .About41 div, .About42 div {
+        height: 100px;
+    }
+}
